--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>¡Bienvenido!</h1>
+<p>Esta es la aplicación del <span>Grupo 2</span> de Taller de Integración | IIC3103 - Sección 1 | 1' 2016</p>
+<p>Para revisar el código debes solicitar acceso al siguiente repositorio: <a href="https://github.com/psaratscheff/integra2">https://github.com/psaratscheff/integra2</a></p>
