actualizacion de documentacion

--- a/app/views/api/documentacion/index.html.erb
+++ b/app/views/api/documentacion/index.html.erb
@@ -1,3 +1,10 @@
 <h1>Documentación API - Grupo 2</h1>
 <h2>Lista de funcionalidades implementadas:</h2>
-<p>TODO: Rellenar comandos</p>
+<ul>
+  <li><h3>api/documentacion</h3></li>
+  <p>Muestra esta página con la documentación de la aplicación</p>
+
+  <li><h3>api/consultar/.:sku</h3></li>
+  <p>Retorna un JSON con el stock del SKU sumando todas las bodegas de la empresa</p>
+  <p>El formato de retorno es: <span class="code">{“stock”: int, “sku”: int}</span></p>
+</ul>
