--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>¡Bienvenido!</h1>
 <p>Esta es la aplicación del <span>Grupo 2</span> de Taller de Integración | IIC3103 - Sección 1 | 1' 2016</p>
-<p>Para revisar el código debes solicitar acceso al siguiente repositorio: <a href="https://github.com/psaratscheff/integra2">https://github.com/psaratscheff/integra2</a></p>
+<p>Para revisar <strong>la documentación</strong> de la api: <a href="/api/documentacion">https://integra2.ing.puc.cl/api/documentacion</a></p>
+<p>Para revisar <strong>el código</strong> debes <u>solicitar acceso</u> al siguiente repositorio: <a href="https://github.com/psaratscheff/integra2">https://github.com/psaratscheff/integra2</a></p>
