metodo y parametros documentacion api

--- a/app/views/api/documentacion/index.html.erb
+++ b/app/views/api/documentacion/index.html.erb
@@ -3,16 +3,25 @@
 <ul>
   <li><h3>api/documentacion</h3></li>
   <p>Muestra esta página con la documentación de la aplicación.</p>
+  <p>Parámetros: Ningungo</p>
+  <p>Método Http: <span class="code">GET</span></p>
+  <p>Retorno: <span class="code">HTML</span></p>
 
   <li><h3>api/ids/grupo</h3></li>
   <p>Retorna un JSON con el id del grupo.</p>
-  <p>El formato de retorno es: <span class="code">{“id”: string}</span></p>
+  <p>Parámetros: Ningungo</p>
+  <p>Método Http: <span class="code">GET</span></p>
+  <p>Retorno: <span class="code">{“id”: string}</span></p>
 
   <li><h3>api/ids/banco</h3></li>
   <p>Retorna un JSON con el id de la cuenta de banco del grupo.</p>
-  <p>El formato de retorno es: <span class="code">{“id”: string}</span></p>
+  <p>Parámetros: Ningungo</p>
+  <p>Método Http: <span class="code">GET</span></p>
+  <p>Retorno: <span class="code">{“id”: string}</span></p>
 
   <li><h3>api/consultar/.:sku</h3></li>
   <p>Retorna un JSON con el stock del SKU sumando todas las bodegas de la empresa.</p>
-  <p>El formato de retorno es: <span class="code">{“stock”: int, “sku”: int}</span></p>
+  <p>Parámetros: Ningungo</p>
+  <p>Método Http: <span class="code">GET</span></p>
+  <p>Retorno: <span class="code">{“stock”: int, “sku”: int}</span></p>
 </ul>
