--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -32,20 +32,20 @@
     <%= f.text_field :Unidades %>
   </div>
   <div class="field">
-    <%= f.label :CostoUnitario %><br>
-    <%= f.number_field :CostoUnitario %>
+    <%= f.label :Costo_Unitario %><br>
+    <%= f.number_field :Costo_Unitario %>
   </div>
   <div class="field">
     <%= f.label :Lote %><br>
     <%= f.number_field :Lote %>
   </div>
   <div class="field">
-    <%= f.label :TiempoMedio %><br>
-    <%= f.text_field :TiempoMedio %>
+    <%= f.label :Tiempo_Medio %><br>
+    <%= f.text_field :Tiempo_Medio %>
   </div>
   <div class="field">
-    <%= f.label :PrecioUnitario %><br>
-    <%= f.number_field :PrecioUnitario %>
+    <%= f.label :Precio_Unitario %><br>
+    <%= f.number_field :Precio_Unitario %>
   </div>
   <div class="field">
     <%= f.label :Sku1 %><br>
