--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,10 +10,10 @@
       <th>Tipo</th>
       <th>Grupo</th>
       <th>Unidades</th>
-      <th>Costounitario</th>
+      <th>Costo unitario</th>
       <th>Lote</th>
-      <th>Tiempomedio</th>
-      <th>Preciounitario</th>
+      <th>Tiempo medio</th>
+      <th>Precio unitario</th>
       <th>Sku1</th>
       <th>Sku2</th>
       <th>Sku3</th>
@@ -30,10 +30,10 @@
         <td><%= item.Tipo %></td>
         <td><%= item.Grupo %></td>
         <td><%= item.Unidades %></td>
-        <td><%= item.CostoUnitario %></td>
+        <td><%= item.Costo_Unitario %></td>
         <td><%= item.Lote %></td>
-        <td><%= item.TiempoMedio %></td>
-        <td><%= item.PrecioUnitario %></td>
+        <td><%= item.Tiempo_Medio %></td>
+        <td><%= item.Precio_Unitario %></td>
         <td><%= item.Sku1 %></td>
         <td><%= item.Sku2 %></td>
         <td><%= item.Sku3 %></td>
