--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,8 +26,8 @@
 </p>
 
 <p>
-  <strong>Costounitario:</strong>
-  <%= @item.CostoUnitario %>
+  <strong>Costo unitario:</strong>
+  <%= @item.Costo_Unitario %>
 </p>
 
 <p>
@@ -36,13 +36,13 @@
 </p>
 
 <p>
-  <strong>Tiempomedio:</strong>
-  <%= @item.TiempoMedio %>
+  <strong>Tiempo medio:</strong>
+  <%= @item.Tiempo_Medio %>
 </p>
 
 <p>
-  <strong>Preciounitario:</strong>
-  <%= @item.PrecioUnitario %>
+  <strong>Precio unitario:</strong>
+  <%= @item.Precio_Unitario %>
 </p>
 
 <p>
