fix documentacion urls

--- a/app/views/api/documentacion/index.html.erb
+++ b/app/views/api/documentacion/index.html.erb
@@ -1,27 +1,27 @@
 <h1>Documentación API - Grupo 2</h1>
 <h2>Lista de funcionalidades implementadas:</h2>
 <ul>
-  <li><h3>api/documentacion (GET)</h3></li>
+  <li><a href="documentacion">integra2.ing.puc.cl/api/documentacion (GET)</a></li>
   <p>Muestra esta página con la documentación de la aplicación.</p>
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">HTML</span></p>
 
-  <li><h3>api/ids/grupo (GET)</h3></li>
+  <li><a href="ids/grupo">integra2.ing.puc.cl/api/ids/grupo (GET)</a></li>
   <p>Retorna un JSON con el id del grupo.</p>
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">{“id”: string}</span></p>
 
-  <li><h3>api/ids/banco (GET)</h3></li>
+  <li><a href="ids/banco">integra2.ing.puc.cl/api/ids/banco (GET)</a></li>
   <p>Retorna un JSON con el id de la cuenta de banco del grupo.</p>
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">{“id”: string}</span></p>
 
-  <li><h3>api/ids/almacenId (GET)</h3></li>
+  <li><a href="ids/almacenId">integra2.ing.puc.cl/api/ids/almacenId (GET)</a></li>
   <p>Retorna un JSON con el id del almacen de recepción del grupo.</p>
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">{“id”: string}</span></p>
 
-  <li><h3>api/consultar/.:sku (GET)</h3></li>
+  <li><a href="consultar/1">integra2.ing.puc.cl/api/consultar/.:sku (GET)</a></li>
   <p>Retorna un JSON con el stock del SKU sumando todas los almacenes de la empresa (Excepto las de despacho).</p>
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">{“stock”: int, “sku”: int}</span></p>
