--- a/app/views/api/documentacion/index.html.erb
+++ b/app/views/api/documentacion/index.html.erb
@@ -21,8 +21,25 @@
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">{“id”: string}</span></p>
 
-  <li><a href="consultar/1">integra2.ing.puc.cl/api/consultar/.:sku (GET)</a></li>
+  <li><a href="#">integra2.ing.puc.cl/api/consultar/.:sku (GET)</a></li>
   <p>Retorna un JSON con el stock del SKU sumando todas los almacenes de la empresa (Excepto las de despacho).</p>
   <p>Parámetros: Ningungo</p>
   <p>Retorno: <span class="code">{“stock”: int, “sku”: int}</span></p>
+
+  <li><a href="#">integra2.ing.puc.cl/api/oc/recibir/.:idoc (GET)</a></li>
+  <p>Retorna un JSON informando si se aceptó la OC</p>
+  <p>Parámetros: Ningungo</p>
+  <p>Retorno: <span class="code">{“aceptado”: boolean, “idoc”: string}</span></p>
+
+  <li><a href="#">integra2.ing.puc.cl/api/facturas/recibir/.:idfactura (GET)</a></li>
+  <p>Retorna un JSON informando si se validó la factura</p>
+  <p>Parámetros: Ningungo</p>
+  <p>Retorno: <span class="code">{“validado”: boolean, “idfactura”: string}</span></p>
+
+  <li><a href="#">integra2.ing.puc.cl/api/oc/recibir/.:idoc (GET)</a></li>
+  <p>Retorna un JSON informando si se aceptó la OC</p>
+  <p>Parámetros: Ningungo</p>
+  <p>Retorno: <span class="code">{“aceptado”: boolean, “idoc”: string}</span></p>
+
+  <li>Nos falta ver pagos...</li>
 </ul>
