--- a/app/assets/stylesheets/ocs.scss
+++ b/app/assets/stylesheets/ocs.scss
@@ -1,6 +1,12 @@
 // Place all the styles related to the ocs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// ------ css estructura
+#ocs {
+  margin-left: 30px;
+}
+// ------ css tabla
 .list {
   font-family:sans-serif;
 }
