--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+header {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+}
+header h1 {
+  font-size: 500%;
+}
+header h3 {
+  font-size: 200%;
+}
+
+p {
+  margin-left: 10%;
+  margin-top: 5%;
+  font-size: 200%;
+}
+
+strong {
+  font-size: 100%;
+}
