--- a/app/views/ocs/index.html.erb
+++ b/app/views/ocs/index.html.erb
@@ -6,7 +6,7 @@
 <h1>Lista de OCs</h1>
   <input class="search" placeholder="Buscar..." />
   <button class="sort" data-sort="estado">
-    Ordenar por Estado
+    Ordenar por estado
   </button>
   <button class="sort" data-sort="canal">
     Ordenar por canal
