fix documentacion css

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,12 +13,12 @@ header h3 {
   font-size: 200%;
 }
 
-p {
+main p {
   margin-left: 10%;
   margin-top: 5%;
   font-size: 200%;
 }
 
-strong {
+main strong {
   font-size: 100%;
 }
