show almacens with products

--- a/app/views/almacens/index.html.erb
+++ b/app/views/almacens/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= almacen.despacho %></td>
         <td><%= almacen.recepcion %></td>
         <td><%= almacen.espacioTotal %></td>
-        <td><%= almacen.espacioUtilizado %></td>
+        <td><%= almacen.productos.count %></td>
         <td><%= almacen._id %></td>
         <td><%= link_to 'Show', almacen %></td>
         <td><%= link_to 'Edit', edit_almacen_path(almacen) %></td>
