--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,6 +10,6 @@
 <p>Para revisar <strong>la documentación</strong> de la api: <a href="/api/documentacion">https://integra2.ing.puc.cl/api/documentacion</a></p>
 <p>Para revisar las <strong>Ordenes de Compra</strong>: <a href="/ocs">https://integra2.ing.puc.cl/ocs</a></p>
 <p>Para revisar <strong>el código</strong> debes <u>solicitar acceso</u> al siguiente repositorio: <a href="https://github.com/psaratscheff/integra2">https://github.com/psaratscheff/integra2</a></p>
-<p>Para revisar la tienda de<strong> e-commerce</strong> debes presionar aqui <a href="https://integra2.ing.puc.cl/spree">https://integra2.ing.puc.cl/spree</a></p>
+<p>Para revisar la tienda de<strong> e-commerce</strong> debes presionar aqui <a href="/spree">https://integra2.ing.puc.cl/spree</a></p>
 
 </main>
