--- a/app/assets/javascripts/spree/frontend/checkout.js.erb
+++ b/app/assets/javascripts/spree/frontend/checkout.js.erb
@@ -22,22 +22,36 @@ ready = function() {
   var iva = getUrlParameter('iva');
   var total = getUrlParameter('total');
   var direccion = getUrlParameter('direccion');
+  var sku = getUrlParameter('sku');
+  var cantidad = getUrlParameter('cantidad');
   if (success === 'true') {
     $('[data-hook="homepage_products"]').html(`
       <h1 class='product-title' itemprop='name'> Tu Compra fue realizada con éxito.</h1>
-          <h3> Información de tu boleta </h3>
-          <div class='well' itemprop='description' data-hook='description'>
-            <b> ID Boleta: </b> ` + idBoleta + `
-            <br />
-            <b> Monto Bruto: </b> ` + montoBruto + `
-            <br />
-            <b> IVA: </b> ` + iva + `
-            <br />
-            <b> Total: </b> ` + total + `
-            <br />
-            <b> Direccion: </b> ` + direccion + `
-          </div>`
+      <h3> Información de tu boleta </h3>
+      <div class='well' itemprop='description' data-hook='description'>
+        <b> ID Boleta: </b> ` + idBoleta + `
+        <br />
+        <b> Monto Bruto: </b> ` + montoBruto + `
+        <br />
+        <b> IVA: </b> ` + iva + `
+        <br />
+        <b> Total: </b> ` + total + `
+        <br />
+        <b> Direccion: </b> ` + direccion + `
+      </div>
+      <div id="despachado" class='well''>
+        <h2>Despachando, por favor espere...</h2>
+      </div>`
     );
+    $.ajax({
+        dataType: "json",
+        type: "GET",
+        url: "/handle_payment/despachar_producto/264f93gfwygf7sdfyb/" + idBoleta + "?direccion=" + direccion + "&sku=" + sku + "&cantidad=" + cantidad,
+        success: function(data) {
+          $('#despachado').html("<h1>¡Producto despachado!<h1>");
+        }
+      });
+    '/handle_payment/despachar_producto/264f93gfwygf7sdfyb'
   } else if (success === 'false') {
     $('[data-hook="homepage_products"]').html(`
       <h1 class='product-title' itemprop='name'>No se pudo completar tu compra.</h1>
