--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,4 +12,5 @@
 <p>Para revisar <strong>el código</strong> debes <u>solicitar acceso</u> al siguiente repositorio: <a href="https://github.com/psaratscheff/integra2">https://github.com/psaratscheff/integra2</a></p>
 <p>Para revisar la tienda de<strong> e-commerce</strong> debes presionar aqui <a href="/spree">https://integra2.ing.puc.cl/spree</a></p>
 
+<p>Para revisar el <strong> dashboard </strong> debes presionar aqui <a href="/dashboard/index">https://integra2.ing.puc.cl/dashboard/index</a></p>
 </main>
