--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -31,6 +31,11 @@
 <a href="http://localhost:3000//dashboard/saldobanco" target="_blank">Saldo Banco</a>
 </li>
 
+<li> 
+<%=@fecha%>
+</li>
+
+
 
 
 </ul>
