--- a/app/views/dashboard/saldobanco.html.erb
+++ b/app/views/dashboard/saldobanco.html.erb
@@ -9,7 +9,7 @@
       function drawStuff() {
         var data = new google.visualization.arrayToDataTable([
           ['Move', 'Pesos chilenos'],
-          ["Saldo actual", 10000],
+          ["Saldo actual", 1000000],
         ]);
 
         var options = {
