--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,16 +24,21 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Estadísticas <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/api/documentacion">Documentación API</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Productos</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Materia prima</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">Bodega de recepción</a></li>
+            <li><a href="#">Bodega de despacho</a></li>
+            <li><a href="#">Bodega pulmón</a></li>
+            <li><a href="#">Almacen Normal 1</a></li>
+            <li><a href="#">Almacen Normal 2</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Saldo banco</a></li>
           </ul>
         </li>
       </ul>
+
 
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/contact">Contáctanos</a></li>
