--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,12 +6,9 @@
 </br>
 
 
-
 <div class="row">
   <div class="col-md-8">
-
-
-    <form class="form-horizontal" role="form" method="post" action="index.php">
+    <form class="form-horizontal" role="form" action="MAILTO:someone@example.com" method="POST" enctype="text/plain">
     	<div class="form-group">
     		<label for="name" class="col-sm-2 control-label">Nombre</label>
     		<div class="col-sm-10">
@@ -30,8 +27,6 @@
     			<textarea class="form-control" rows="4" name="message"></textarea>
     		</div>
     	</div>
-
-
     	<div class="form-group">
     		<div class="col-sm-10 col-sm-offset-2">
     			<input id="submit" name="submit" type="submit" value="Enviar" class="btn btn-primary">
