fix styling ocs table

--- a/app/views/ocs/index.html.erb
+++ b/app/views/ocs/index.html.erb
@@ -24,7 +24,7 @@
   <button class="sort" data-sort="proveedor">
     Ordenar por proveedor
   </button>
-  <table>
+  <table class="table-striped">
     <thead>
       <tr>
         <th>Idoc</th>
