--- a/app/views/dashboard/materiasprimas.html.erb
+++ b/app/views/dashboard/materiasprimas.html.erb
@@ -9,10 +9,10 @@
       function drawStuff() {
         var data = new google.visualization.arrayToDataTable([
           ['Move', 'Cantidad'],
-          ["Avena (sku 15)", 10],
-          ["Cacao (sku 20)", 10],
-          ["Azucar (sku 25)", 10],
-          ["Lino (sku 37)", 10]
+          ["Avena (sku 15)", <%=@avena%>],
+          ["Cacao (sku 20)", <%=@cacao%>],
+          ["Azucar (sku 25)", <%=@azucar%>],
+          ["Lino (sku 37)", <%=@lino%>]
         ]);
 
   
