--- a/app/views/dashboard/despacho.html.erb
+++ b/app/views/dashboard/despacho.html.erb
@@ -1,1 +1,26 @@
-<h1>Despacho</h1>
+<html>
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Espacio en almacen'],
+          ['Espacio disponible', <%=@disponibleDespacho%>],
+          ['Espacio ocupado',<%=@ocupadoDespacho%>]
+        ]);
+        var options = {
+          title: 'Espacio disponible/ocupado en Almacen de Despacho',
+          is3D: true,
+        };
+        var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+  <body>
+  	<h1>Despacho</h1>
+    <div id="piechart_3d" style="width: 900px; height: 500px;"></div>
+  </body>
+</html>
