--- a/app/views/dashboard/despacho.html.erb
+++ b/app/views/dashboard/despacho.html.erb
@@ -4,46 +4,29 @@
     <script type="text/javascript">
       google.charts.load("current", {packages:["corechart"]});
       google.charts.setOnLoadCallback(drawChart);
-<<<<<<< HEAD
+
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
           ['Task', 'Espacio en almacen'],
           ['Espacio disponible', <%=@disponibleDespacho%>],
           ['Espacio ocupado',<%=@ocupadoDespacho%>]
         ]);
-=======
 
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Task', 'Espacio en almacen'],
-          ['Espacio disponible',     12],
-          ['Espacio ocupado',      15]
-        ]);
-
->>>>>>> e764a98f50450e01416420ea3554f950ffb9bb67
         var options = {
           title: 'Espacio disponible/ocupado en Almacen de Despacho',
           is3D: true,
         };
-<<<<<<< HEAD
-        var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
-        chart.draw(data, options);
-      }
-=======
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
         chart.draw(data, options);
       }
 
->>>>>>> e764a98f50450e01416420ea3554f950ffb9bb67
     </script>
   </head>
   <body>
-  	<h1>Despacho</h1>
+  	<h1>Almacén de Despacho</h1>
     <div id="piechart_3d" style="width: 900px; height: 500px;"></div>
   </body>
-<<<<<<< HEAD
+
 </html>
-=======
-</html>
->>>>>>> e764a98f50450e01416420ea3554f950ffb9bb67
+
