--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,17 +24,20 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Estadísticas <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Productos</a></li>
+            <li><a href="http://localhost:3000/dashboard/productos" target="_blank">Productos</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Materia prima</a></li>
+            <li><a href="http://localhost:3000/dashboard/materiasprimas" target="_blank">Materias Primas</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Bodega de recepción</a></li>
-            <li><a href="#">Bodega de despacho</a></li>
-            <li><a href="#">Bodega pulmón</a></li>
-            <li><a href="#">Almacen Normal 1</a></li>
-            <li><a href="#">Almacen Normal 2</a></li>
+            <li><a href="http://localhost:3000/dashboard/bodega" target="_blank">Espacio en Bodega</a></li>
+            <li><a href="http://localhost:3000/dashboard/recepcion" target="_blank">Almacén de Recepción</a></li>
+            <li><a href="http://localhost:3000/dashboard/despacho" target="_blank">Almacén de Despacho</a></li>
+            <li><a href="http://localhost:3000/dashboard/pulmon" target="_blank">Almacén Pulmón</a></li>
+            <li><a href="http://localhost:3000/dashboard/almacen1" target="_blank">Almacen 1</a></li>
+            <li><a href="http://localhost:3000/dashboard/almacen2" target="_blank">Almacen 2</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Saldo banco</a></li>
+            <li><a href="http://localhost:3000/dashboard/saldobanco" target="_blank"> Saldo Banco</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="http://localhost:3000/dashboard/ventas"> Transacciones semanales</a></li>
           </ul>
         </li>
       </ul>
