--- a/app/views/dashboard/bodega.html.erb
+++ b/app/views/dashboard/bodega.html.erb
@@ -13,7 +13,7 @@
         ]);
 
         var options = {
-          title: 'Espacio disponible/ocupado contando todos los almacenes',
+          title: 'Espacio disponible/ocupado contando todos los almacenes menos el pulmón',
           is3D: true,
         };
 
