--- a/app/views/dashboard/saldobanco.html.erb
+++ b/app/views/dashboard/saldobanco.html.erb
@@ -2,9 +2,15 @@
 <br/>
 <br/>
 <br/>
-<h1>Saldo Actual</h1>
+<h3><DIV ALIGN=center>Saldo Actual</DIV></h3>
 <br/>
-<%=@saldo%>
+<h3 style="color:blue;"><DIV ALIGN=center>
+	<%=@saldo%>
+
+</DIV></h3>
+
+
+
 <br/>
 <br/>
 <br/>
