--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,8 @@
             <li><a href="http://localhost:3000/dashboard/materiasprimas" target="_blank">Materias Primas</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="http://localhost:3000/dashboard/bodega" target="_blank">Espacio en Bodega</a></li>
+            <li role="separator" class="divider"></li>
+
             <li><a href="http://localhost:3000/dashboard/recepcion" target="_blank">Almacén de Recepción</a></li>
             <li><a href="http://localhost:3000/dashboard/despacho" target="_blank">Almacén de Despacho</a></li>
             <li><a href="http://localhost:3000/dashboard/pulmon" target="_blank">Almacén Pulmón</a></li>
